code with day 2 session

--- a/Complete project to play around with/assets/css/style.css
+++ b/Complete project to play around with/assets/css/style.css
@@ -3,7 +3,7 @@
 .hero-img
 {
 
-    background-image:url(/assets/imgs/01.jpg),linear-gradient(to top, rgba(0, 0, 0, 0.575), rgba(0, 0, 0, 0.521));
+    background-image:url(../imgs/01.jpg),linear-gradient(to top, rgba(0, 0, 0, 0.575), rgba(0, 0, 0, 0.521));
     background-position: center ;
     background-size: cover;
 
